# rules_typescript

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  closure_worker_input  defs.bzl  package.json  rules_typescript.wksp
examples/app/: BUILD.bazel  index.html  main.ts  main_e2e_test.ts
examples/es6_output/: BUILD.bazel  closure_compiler_test.sh  es6_output_test.sh  greeter.ts  main.ts
examples/googmodule/: BUILD.bazel
examples/proto/: BUILD.bazel  README.md  WORKSPACE  customer.proto  render_customer.ts
examples/protocol_buffers/: BUILD.bazel
examples/some_module/: BUILD.bazel
examples/testing/: BUILD.bazel  bad.js
examples/transformers/: BUILD  upper_case_xform.ts
internal/: BUILD.bazel  build_defs.bzl  closure.bzl  node_launcher.sh  package.json  ts_proto_library.bzl  ts_repositories.bzl  yarn.bzl  yarn_check.bzl
internal/common/: compilation.bzl  module_mappings.bzl  reroot_prod_files.bzl  tsconfig.bzl
internal/devserver/: ts_devserver.bzl
internal/e2e/ts_auto_deps/: WORKSPACE  package.json
internal/karma/: BUILD.bazel  README.md  karma.conf.js  package.json  ts_web_test.bzl
internal/protobufjs/: BUILD.bazel  package.json  ts_proto_library.bzl
internal/tsc_wrapped/: BUILD.bazel  compiler_host.ts  plugin_api.ts  tsc_wrapped.ts  tsconfig.json  tsconfig.ts  worker.ts
ts_auto_deps/: BUILD.bazel  main.go
ts_auto_deps/analyze/: BUILD.bazel  imports.go  query.go  query_test.go
ts_auto_deps/proto/: BUILD.bazel  analyze_result.proto
ts_auto_deps/updater/: BUILD.bazel  log.go  updater.go  updater_test.go
ts_auto_deps/workspace/: BUILD.bazel  workspace.go
