load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

proto_library(
    name = "analyze_result_proto",
    srcs = ["analyze_result.proto"],
)

go_proto_library(
    name = "analyze_result_go_proto",
    importpath = "github.com/bazel_rules/rules_typescript/analyze_result_go_proto",
    proto = ":analyze_result_proto",
)

proto_library(
    name = "blaze_analyze_proto",
    srcs = ["analyze_result.proto"],
)

go_proto_library(
    name = "blaze_analyze_go_proto",
    importpath = "github.com/bazelbuild/rules_typescript/ts_auto_deps/proto",
    proto = ":blaze_analyze_proto",
)

go_library(
    name = "go_default_library",
    embed = [":blaze_analyze_go_proto"],
    importpath = "github.com/bazelbuild/rules_typescript/ts_auto_deps/proto",
)
